@@ -90,6 +90,12 @@ operation as <a href="../CoreTypes/filterset.html">filtersets</a>.
     <td valign="top" align="center">No; defaults to false.</td>
   </tr>
   <tr>
+    <td valign="top">force</td>
+    <td valign="top">Overwrite read-only destination
+      files.  <em>since Ant 1.8.2</em></td>
+    <td valign="top" align="center">No; defaults to false.</td>
+  </tr>
+  <tr>
     <td valign="top">filtering</td>
     <td valign="top">Indicates whether token filtering using the <a href="../using.html#filters">global
         build-file filters</a> should take place during the copy.
